rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__data_escape_quoting.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (data_escape_quoting), r#\"'version=\\\"1.0\\\"'\"#)"
snapshot_kind: text
---
[
    Token {
        kind: Literal(
            Data(
                [
                    118,
                    101,
                    114,
                    115,
                    105,
                    111,
                    110,
                    61,
                    34,
                    49,
                    46,
                    48,
                    34,
                ],
            ),
        ),
        position: (
            0,
            17,
        ),
    },
]
