rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__four_symbol_tokens.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (four_symbol_tokens), \">>>=\")"
snapshot_kind: text
---
[
    Token {
        kind: GreaterGreaterGreaterEqual,
        line_column: (
            1,
            1,
        ),
        position: (
            0,
            4,
        ),
    },
]
