rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__identifier.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (identifier), \"help_lo _hello _h4llo 4_h4llo\")"
snapshot_kind: text
---
[
    Token {
        kind: Keyword(
            Undefined(
                "help_lo",
            ),
        ),
        position: (
            0,
            7,
        ),
    },
    Token {
        kind: Keyword(
            Undefined(
                "_hello",
            ),
        ),
        position: (
            8,
            14,
        ),
    },
    Token {
        kind: Keyword(
            Undefined(
                "_h4llo",
            ),
        ),
        position: (
            15,
            21,
        ),
    },
    Token {
        kind: Number(
            4,
        ),
        position: (
            22,
            23,
        ),
    },
    Token {
        kind: Keyword(
            Undefined(
                "_h4llo",
            ),
        ),
        position: (
            23,
            29,
        ),
    },
]
