rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__keyword_literals.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (keyword_literals), \"TRUE FALSE NULL\")"
---
[
    Token {
        kind: Literal(
            Boolean(
                true,
            ),
        ),
        span: Span {
            start: CharIndex(
                0,
            ),
            end: CharIndex(
                4,
            ),
        },
    },
    Token {
        kind: Literal(
            Boolean(
                false,
            ),
        ),
        span: Span {
            start: CharIndex(
                5,
            ),
            end: CharIndex(
                10,
            ),
        },
    },
    Token {
        kind: Literal(
            Null,
        ),
        span: Span {
            start: CharIndex(
                11,
            ),
            end: CharIndex(
                15,
            ),
        },
    },
]
