rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__numbers.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (numbers),\n\"0 0b01 1234567890 012345670 0x1234567890ABCDEF 0b02\")"
snapshot_kind: text
---
[
    Token {
        kind: Number(
            0,
        ),
        position: (
            0,
            1,
        ),
    },
    Token {
        kind: Number(
            1,
        ),
        position: (
            2,
            6,
        ),
    },
    Token {
        kind: Number(
            1234567890,
        ),
        position: (
            7,
            17,
        ),
    },
    Token {
        kind: Number(
            2739128,
        ),
        position: (
            18,
            27,
        ),
    },
    Token {
        kind: Number(
            1311768467294899695,
        ),
        position: (
            28,
            46,
        ),
    },
    Token {
        kind: Number(
            0,
        ),
        position: (
            47,
            50,
        ),
    },
    Token {
        kind: Number(
            2,
        ),
        position: (
            50,
            51,
        ),
    },
]
