rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__one_char_tokens.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (one_char_tokens),\n\"( ) [ ] { } . - + % ; / * : ~ & | ^\")"
---
[
    Token {
        kind: LeftParen,
        position: (
            0,
            1,
        ),
    },
    Token {
        kind: RightParen,
        position: (
            2,
            3,
        ),
    },
    Token {
        kind: LeftBracket,
        position: (
            4,
            5,
        ),
    },
    Token {
        kind: RightBracket,
        position: (
            6,
            7,
        ),
    },
    Token {
        kind: LeftBrace,
        position: (
            8,
            9,
        ),
    },
    Token {
        kind: RightBrace,
        position: (
            10,
            11,
        ),
    },
    Token {
        kind: Dot,
        position: (
            12,
            13,
        ),
    },
    Token {
        kind: Minus,
        position: (
            14,
            15,
        ),
    },
    Token {
        kind: Plus,
        position: (
            16,
            17,
        ),
    },
    Token {
        kind: Percent,
        position: (
            18,
            19,
        ),
    },
    Token {
        kind: Semicolon,
        position: (
            20,
            21,
        ),
    },
    Token {
        kind: Slash,
        position: (
            22,
            23,
        ),
    },
    Token {
        kind: Star,
        position: (
            24,
            25,
        ),
    },
    Token {
        kind: DoublePoint,
        position: (
            26,
            27,
        ),
    },
    Token {
        kind: Tilde,
        position: (
            28,
            29,
        ),
    },
    Token {
        kind: Ampersand,
        position: (
            30,
            31,
        ),
    },
    Token {
        kind: Pipe,
        position: (
            32,
            33,
        ),
    },
    Token {
        kind: Caret,
        position: (
            34,
            35,
        ),
    },
]
