rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__simple_number.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (simple_number), \"1\")"
snapshot_kind: text
---
[
    Token {
        kind: Literal(
            Number(
                1,
            ),
        ),
        position: (
            0,
            1,
        ),
    },
]
