rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__single_line_comments.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (single_line_comments), \"# this is a comment\\n;\")"
snapshot_kind: text
---
[
    Token {
        kind: Semicolon,
        line_column: (
            2,
            1,
        ),
        position: (
            20,
            21,
        ),
    },
]
