rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__skip_whitespace.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (skip_whitespace), \"     (       \")"
snapshot_kind: text
---
[
    Token {
        kind: LeftParen,
        line_column: (
            1,
            6,
        ),
        position: (
            5,
            6,
        ),
    },
]
